--- a/escom-bpm-web/src/main/webapp/view/errors/505.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/errors/505.xhtml
@@ -21,7 +21,7 @@
     
     <h:body>
         <h:form>
-            <p:panel styleClass="panelLogin ui-grid-col-12">
+            <p:panel styleClass="panelLogin">
                 <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-3, ui-grid-col-9" styleClass="ui-grid-col-12">
                     <p:graphicImage name="/images/escom_logo.jpg"  />
                     <h2>#{bundle.INTERNAL_ERROR}</h2>
