--- a/escom-bpm-web/src/main/webapp/view/sys/noSaveDlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/sys/noSaveDlg.xhtml
@@ -5,31 +5,33 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-    <p:dialog header="#{bundle.DataNoSave}" widgetVar="confirm" width="400" height="195" modal="true" resizable="false"
+    <p:dialog header="#{bundle.DataNoSave}" widgetVar="confirm" width="470" height="195" modal="true" resizable="false"
               maximizable="false" closeOnEscape="true">
         <h:form>
-            <p:panel styleClass="ui-grid-col-12">
-                <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-4, ui-grid-col-8" styleClass="ui-grid-col-12 ui-panelgrid-blank">
-                    <p:graphicImage id="itemIcon" value="/resources/images/info.jpg"/>
-                    <h:outputText value="#{bundle.PressSaveOrCancel}" />
-                </p:panelGrid>
-            </p:panel>
+            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 ui-panelgrid-blank">
+                <p:panel styleClass="ui-grid-col-12">
+                    <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-4, ui-grid-col-8" styleClass="ui-grid-col-12 ui-panelgrid-blank">
+                        <p:graphicImage id="itemIcon" value="/resources/images/info.jpg"/>
+                        <h:outputText value="#{bundle.PressSaveOrCancel}" />
+                    </p:panelGrid>
+                </p:panel>
 
-            <p:toolbar styleClass="ui-grid-col-12">
-                <f:facet name="right">
-                    <p:commandButton value="#{bundle.ExitNoSave}" style="float:right;"
-                                     title="#{bundle.ExitWithoutSaving}"
-                                     action="#{_bean.onFinalCancelSave()}"
-                                     onclick="PF('confirm').hide();"
-                                     icon="ui-icon-circle-close">
-                    </p:commandButton>
-                    <p:commandButton value="#{bundle.Back}" style="float:right;"
-                                     title="#{bundle.GoBackCard}"
-                                     onclick="PF('confirm').hide();"
-                                     icon="ui-icon-arrowreturnthick-1-w">
-                    </p:commandButton>
-                </f:facet>
-            </p:toolbar>
+                <p:toolbar styleClass="ui-grid-col-12">
+                    <f:facet name="right">
+                        <p:commandButton value="#{bundle.ExitNoSave}" style="float:right;"
+                                         title="#{bundle.ExitWithoutSaving}"
+                                         action="#{_bean.onFinalCancelSave()}"
+                                         onclick="PF('confirm').hide();"
+                                         icon="ui-icon-circle-close">
+                        </p:commandButton>
+                        <p:commandButton value="#{bundle.Back}" style="float:right;"
+                                         title="#{bundle.GoBackCard}"
+                                         onclick="PF('confirm').hide();"
+                                         icon="ui-icon-arrowreturnthick-1-w">
+                        </p:commandButton>
+                    </f:facet>
+                </p:toolbar>
+            </p:panelGrid>
         </h:form>
     </p:dialog>
 
