--- a/escom-bpm-web/src/main/webapp/view/docs/doc-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-explorer.xhtml
@@ -18,6 +18,37 @@
                      styleClass="ui-grid-col-12"
                      onkeypress="keyPress();">
         </p:inputText>
+        <p:selectBooleanCheckbox itemLabel="#{bundle.DateDoc}" 
+                                 title="#{bundle.SearcheDateDoc}" 
+                                 value="#{explorerBean.model.dateDocSearche}">
+            <p:ajax event="change" partialSubmit="true" update="pnDateDocSearche"/>
+        </p:selectBooleanCheckbox>   
+
+        <h:panelGroup id="pnDateDocSearche"> 
+            <p:panelGrid columns="2" layout="grid" columnClasses="col10r ui-grid-col-1" 
+                         rendered="#{explorerBean.model.dateDocSearche}">
+                #{bundle.With}
+                <p:calendar value="#{explorerBean.model.dateDocStart}" id="dateDocStart" 
+                            showButtonPanel="true" navigator="true" yearRange="c-120:c+20" 
+                            locale="#{sessionBean.locale}"
+                            required="#{explorerBean.model.dateDocSearche}"
+                            requiredMessage="#{bundle.Field} [#{bundle.DateDoc}: #{bundle.With}] #{bundle.MustBeFilled}"
+                            disabled="#{!explorerBean.model.dateDocSearche}">
+                    <p:ajax event="dateSelect" update="dateDocEnd" listener="#{explorerBean.dateDocStartChange()}"/>
+                </p:calendar>
+            </p:panelGrid>
+            <p:panelGrid columns="2" layout="grid" columnClasses="col10r ui-grid-col-1" 
+                         rendered="#{explorerBean.model.dateDocSearche}">
+                #{bundle.At}
+                <p:calendar value="#{explorerBean.model.dateDocEnd}" id="dateDocEnd" 
+                            showButtonPanel="true" navigator="true" yearRange="c-120:c+20" 
+                            locale="#{sessionBean.locale}"
+                            required="#{explorerBean.model.dateDocSearche}"
+                            requiredMessage="#{bundle.Field} [#{bundle.DateDoc}: #{bundle.At}] #{bundle.MustBeFilled}"
+                            disabled="#{!explorerBean.model.dateDocSearche}">
+                </p:calendar>
+            </p:panelGrid>
+        </h:panelGroup>
     </ui:define>
     
     <!-- специфичные пункты в меню тулбара обозревателя -->
@@ -50,12 +81,18 @@
 
     <!-- специфичные поля таблицы обозревателя -->
     <ui:define name="specDetailColumns">
-        <p:column headerText="#{bundle.Type}" sortBy="#{item.typeName}" >
-            <h:outputText value="#{item.typeName}"/>           
+        <p:column headerText="#{bundle.Type}" sortBy="#{item.docType.name}" >
+            <h:outputText value="#{item.docType.name}"/>
         </p:column>
 
         <p:column headerText="#{bundle.Number}" sortBy="#{item.number}" >            
             <h:outputText value="#{item.regNumber}"/>            
+        </p:column>
+        <p:column headerText="#{bundle.DateDoc}" width="90" priority="2"
+                  sortBy="#{item.dateDoc}">
+            <h:outputLabel value="#{item.dateDoc}">
+                <f:convertDateTime type="date" dateStyle="short" timeStyle="short" locale="#{sessionBean.locale}" timeZone="#{TimeZone.getDefault()}"/>
+            </h:outputLabel>
         </p:column>
     </ui:define> 
 
