--- a/escom-bpm-web/src/main/webapp/view/docs/doc-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-card.xhtml
@@ -70,104 +70,113 @@
     
     <ui:define name="page_body">       
         <p:tab title="#{bundle.CardDoc}" id="tabDocCard" >
-            <p:panelGrid id="panelDocCard" layout="grid" columns="1" columnClasses="ui-grid-col-12" styleClass="without-spaces ui-grid-col-12">
-                <p:outputLabel value="#{bundle.Organization}:" for="company"/>
-                <h:panelGroup id="сompanyPanel" styleClass="ui-grid-col-12 col-padding">
-                    <p:selectOneMenu value="#{_bean.editedItem.company}" id="company" converter="companyConvertor"
-                                     title="#{bundle.CompanyDocRegistred}"
-                                     disabled="#{_bean.isReadOnly() or _item.number != null}"
-                                     styleClass="ui-grid-col-12" 
-                                     required="#{param['isRequired'] == 'true'}" 
-                                     requiredMessage="#{bundle.Field} [#{bundle.Organization}] #{bundle.MustBeFilled}">
-                        <f:selectItems value="#{companyBean.findAll()}" var="org" itemLabel="#{org.name}" itemValue="#{org}" />
-                        <f:selectItem value="#{null}" itemLabel="#{bundle.EmptySelData}" itemValue="#{null}" noSelectionOption="true"/>
-                        <p:ajax event="change" update="regNumberPanel" oncomplete="return itemChange = 1;"/>
-                    </p:selectOneMenu>
-                </h:panelGroup>
+            <p:panelGrid id="panelDocCard" layout="grid" columns="1" columnClasses="ui-grid-col-12 without-spaces" styleClass="without-spaces ui-grid-col-12">
+                <p:panelGrid layout="grid" columns="1" columnClasses="ui-grid-col-12" styleClass="without-spaces ui-grid-col-12">
+                    <p:outputLabel value="#{bundle.Organization}:" for="company"/>
+                    <h:panelGroup id="сompanyPanel" styleClass="ui-grid-col-12">
+                        <p:selectOneMenu value="#{_bean.editedItem.company}" id="company" converter="companyConvertor"
+                                         title="#{bundle.CompanyDocRegistred}"
+                                         disabled="#{_bean.isReadOnly() or _item.number != null}"
+                                         styleClass="ui-grid-col-12" 
+                                         required="#{param['isRequired'] == 'true'}" 
+                                         requiredMessage="#{bundle.Field} [#{bundle.Organization}] #{bundle.MustBeFilled}">
+                            <f:selectItems value="#{companyBean.findAll()}" var="org" itemLabel="#{org.name}" itemValue="#{org}" />
+                            <f:selectItem value="#{null}" itemLabel="#{bundle.EmptySelData}" itemValue="#{null}" noSelectionOption="true"/>
+                            <p:ajax event="change" update="regNumberPanel" oncomplete="return itemChange = 1;"/>
+                        </p:selectOneMenu>
+                    </h:panelGroup>
 
-                <p:outputLabel value="#{bundle.DocTypes}:"/>
-                <ui:include src="/view/common/item-select-btn.xhtml" >
-                    <ui:param name="_itemValue" value="#{_bean.editedItem.docType}"/>
-                    <ui:param name="_required" value="#{true}" />
-                    <ui:param name="_disabled" value="#{_bean.isReadOnly() or _item.number != null}"/>
-                    <ui:param name="_converter" value="docsTypesConvertor" />
-                    <ui:param name="_itemPanel" value="docTypePanel"/>
-                    <ui:param name="_titleItem" value="#{bundle.DocTypes}"/>
-                    <ui:param name="_selectorBean" value="#{docTypeBean}"/>
-                    <ui:param name="_items" value="#{docTypeBean.findAll()}"/>
-                    <ui:param name="_actionClear" value="setDocType"/>
-                    <ui:param name="_actionSelect" value="onDocTypeSelected"/>
-                    <ui:param name="_update" value="#{_frm}:mainTabView:regNumberPanel #{_frm}:mainTabView:docStatusTbl #{_frm}:mainTabView:explToolBar"/>
-                </ui:include>
+                    <p:outputLabel value="#{bundle.DocTypes}:"/>
+                    <ui:include src="/view/common/item-select-btn.xhtml" >
+                        <ui:param name="_itemValue" value="#{_bean.editedItem.docType}"/>
+                        <ui:param name="_required" value="#{true}" />
+                        <ui:param name="_disabled" value="#{_bean.isReadOnly() or _item.number != null}"/>
+                        <ui:param name="_converter" value="docsTypesConvertor" />
+                        <ui:param name="_itemPanel" value="docTypePanel"/>
+                        <ui:param name="_titleItem" value="#{bundle.DocTypes}"/>
+                        <ui:param name="_selectorBean" value="#{docTypeBean}"/>
+                        <ui:param name="_items" value="#{docTypeBean.findAll()}"/>
+                        <ui:param name="_actionClear" value="setDocType"/>
+                        <ui:param name="_actionSelect" value="onDocTypeSelected"/>
+                        <ui:param name="_update" value="#{_frm}:mainTabView:regNumberPanel #{_frm}:mainTabView:docStatusTbl #{_frm}:mainTabView:explToolBar"/>
+                    </ui:include>
 
-                <p:outputLabel value="#{bundle.Name}:" />
-                <p:inputTextarea id="nameDoc" value="#{_bean.editedItem.name}"
-                                 title="#{bundle.BriefDescriptionDocument}"
-                                 styleClass="ui-grid-col-12"
-                                 rows="1" autoResize="true" 
-                                 onkeypress="checkEsc(#{_bean.cancelBtnName});"
-                                 disabled="#{_bean.isReadOnly()}"
-                                 onchange="return itemChange = 1;"
-                                 required="#{param['isRequired'] == 'true'}" 
-                                 requiredMessage="#{bundle.Field} [#{bundle.Name}] #{bundle.MustBeFilled}">
-                    <f:validateLength maximum="250"  />                        
-                </p:inputTextarea>
-
-                <p:outputLabel value="#{bundle.DateDoc}:" /> 
-                <h:panelGroup id="datePanel" styleClass="ui-grid-col-12 col-padding">
-                    <p:calendar id="dateDoc" value="#{_bean.editedItem.dateDoc}"  title="#{bundle.DateRegistredDoc}"
-                                styleClass="ui-grid-col-12"
-                                onkeypress="checkEsc(#{_bean.cancelBtnName});"
-                                disabled="#{_bean.isReadOnly() or _item.number != null}"
-                                onselect="return itemChange = 1;"
-                                required="#{param['isRequired'] == 'true'}" 
-                                showButtonPanel="true" locale="#{sessionBean.locale}"                                
-                                navigator="true" yearRange="c-120:c+20"                                
-                                requiredMessage="#{bundle.Field} [#{bundle.DateDoc}] #{bundle.MustBeFilled}">
-                        <p:ajax event="dateSelect" onstart="itemChange = 1;" />
-                    </p:calendar>
-                </h:panelGroup>
-
-                <p:outputLabel value="#{bundle.Number}:" />  
-                <h:panelGroup id="regNumberPanel" styleClass="ui-grid-col-12 col-padding">
-                    <h:panelGrid columns="3" style="border-collapse: collapse; border:0px;">
-                        <p:inputText value="#{_item.regNumber}" id="number"
-                                     title="#{bundle.RegistredDocNumber}"
+                    <p:outputLabel value="#{bundle.Name}:" />
+                    <p:inputTextarea id="nameDoc" value="#{_bean.editedItem.name}"
+                                     title="#{bundle.BriefDescriptionDocument}"
+                                     styleClass="ui-grid-col-12"
+                                     rows="1" autoResize="true" 
                                      onkeypress="checkEsc(#{_bean.cancelBtnName});"
-                                     disabled="#{_bean.isReadOnly() or _item.number != null}"
+                                     disabled="#{_bean.isReadOnly()}"
                                      onchange="return itemChange = 1;"
-                                     requiredMessage="#{bundle.Field} [#{bundle.Number}] #{bundle.MustBeFilled}"> 
-                        </p:inputText>
-                        <p:commandButton icon="ui-icon-gear" title="#{bundle.Generate}"
-                                         disabled="#{_bean.isReadOnly() or _item.docType.numerator.typeCode == null 
-                                                     or _item.docType.numerator.typeCode eq 'type.manual'
-                                                     or _item.number != null}"
-                                         action="#{_bean.onGenerateRegNumber(_item)}"
-                                         update="docTypePanel datePanel сompanyPanel regNumberPanel"/>
-                        <p:commandButton id="clearNumberBtn"
-                                         icon="ui-icon-close" title="#{bundle.UnRegistred}"
-                                         update="docTypePanel datePanel сompanyPanel regNumberPanel"
-                                         immediate="true"
-                                         actionListener="#{_bean.onClearRegNumber(_item)}"
-                                         disabled="#{_bean.isReadOnly() or _item.regNumber == null}"/>
-                    </h:panelGrid>
-                </h:panelGroup>
-
-                <p:outputLabel value="#{bundle.Partner}:" />
-                <ui:include src="/view/common/item-select-btn.xhtml" >
-                    <ui:param name="_itemValue" value="#{_bean.editedItem.partner}"/>
-                    <ui:param name="_required" value="#{false}" />
-                    <ui:param name="_disabled" value="#{_bean.isReadOnly()}"/>
-                    <ui:param name="_converter" value="partnersConvertors" />
-                    <ui:param name="_itemPanel" value="partnerPanel"/>
-                    <ui:param name="_titleItem" value="#{bundle.Partner}"/>
-                    <ui:param name="_selectorBean" value="#{partnersBean}"/>
-                    <ui:param name="_items" value="#{partnersBean.findAll()}"/>
-                    <ui:param name="_actionClear" value="setPartner"/>
-                    <ui:param name="_actionSelect" value="onPartnerSelected"/>
-                    <ui:param name="_update" value=""/>
-                </ui:include>
+                                     required="#{param['isRequired'] == 'true'}" 
+                                     requiredMessage="#{bundle.Field} [#{bundle.Name}] #{bundle.MustBeFilled}">
+                        <f:validateLength maximum="250"  />                        
+                    </p:inputTextarea>
+                </p:panelGrid>
                 
+                <p:panelGrid layout="grid" columns="2" columnClasses="ui-grid-col-4 without-spaces" styleClass="without-spaces ui-grid-col-12">
+                    <p:panelGrid layout="grid" columns="1" columnClasses="ui-grid-col-12 " styleClass="without-spaces ui-grid-col-12">
+                        <p:outputLabel value="#{bundle.Number}:" />  
+                        <h:panelGroup id="regNumberPanel" styleClass="ui-grid-col-12 col-padding">
+                            <h:panelGrid columns="3" style="border-collapse: collapse; border:0px;">
+                                <p:inputText value="#{_item.regNumber}" id="number"
+                                             title="#{bundle.RegistredDocNumber}"
+                                             onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                                             disabled="#{_bean.isReadOnly() or _item.number != null}"
+                                             onchange="return itemChange = 1;"
+                                             requiredMessage="#{bundle.Field} [#{bundle.Number}] #{bundle.MustBeFilled}"> 
+                                </p:inputText>
+                                <p:commandButton icon="ui-icon-gear" title="#{bundle.Generate}"
+                                                 disabled="#{_bean.isReadOnly() or _item.docType.numerator.typeCode == null 
+                                                             or _item.docType.numerator.typeCode eq 'type.manual'
+                                                             or _item.number != null}"
+                                                 action="#{_bean.onGenerateRegNumber(_item)}"
+                                                 update="docTypePanel datePanel сompanyPanel regNumberPanel"/>
+                                <p:commandButton id="clearNumberBtn"
+                                                 icon="ui-icon-close" title="#{bundle.UnRegistred}"
+                                                 update="docTypePanel datePanel сompanyPanel regNumberPanel"
+                                                 immediate="true"
+                                                 actionListener="#{_bean.onClearRegNumber(_item)}"
+                                                 disabled="#{_bean.isReadOnly() or _item.regNumber == null}"/>
+                            </h:panelGrid>
+                        </h:panelGroup>
+                    </p:panelGrid>
+                    <p:panelGrid  layout="grid" columns="1" columnClasses="ui-grid-col-12" styleClass="without-spaces ui-grid-col-12">
+                        <p:outputLabel value="#{bundle.DateDoc}:" /> 
+                        <h:panelGroup id="datePanel" styleClass="ui-grid-col-12 col-padding">
+                            <p:calendar id="dateDoc" value="#{_bean.editedItem.dateDoc}"  title="#{bundle.DateRegistredDoc}"
+                                        styleClass="ui-grid-col-12"
+                                        onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                                        disabled="#{_bean.isReadOnly() or _item.number != null}"
+                                        onselect="return itemChange = 1;"
+                                        required="#{param['isRequired'] == 'true'}" 
+                                        showButtonPanel="true" locale="#{sessionBean.locale}"                                
+                                        navigator="true" yearRange="c-120:c+20"                                
+                                        requiredMessage="#{bundle.Field} [#{bundle.DateDoc}] #{bundle.MustBeFilled}">
+                                <p:ajax event="dateSelect" onstart="itemChange = 1;" />
+                            </p:calendar>
+                        </h:panelGroup>
+                    </p:panelGrid>
+                    
+                </p:panelGrid>    
+
+                <p:panelGrid layout="grid" columns="1" columnClasses="ui-grid-col-12" styleClass="without-spaces ui-grid-col-12">
+                    <p:outputLabel value="#{bundle.Partner}:" />
+                    <ui:include src="/view/common/item-select-btn.xhtml" >
+                        <ui:param name="_itemValue" value="#{_bean.editedItem.partner}"/>
+                        <ui:param name="_required" value="#{false}" />
+                        <ui:param name="_disabled" value="#{_bean.isReadOnly()}"/>
+                        <ui:param name="_converter" value="partnersConvertors" />
+                        <ui:param name="_itemPanel" value="partnerPanel"/>
+                        <ui:param name="_titleItem" value="#{bundle.Partner}"/>
+                        <ui:param name="_selectorBean" value="#{partnersBean}"/>
+                        <ui:param name="_items" value="#{partnersBean.findAll()}"/>
+                        <ui:param name="_actionClear" value="setPartner"/>
+                        <ui:param name="_actionSelect" value="onPartnerSelected"/>
+                        <ui:param name="_update" value=""/>
+                    </ui:include>
+                </p:panelGrid>
             </p:panelGrid>
         </p:tab> 
 
