--- a/escom-bpm-web/src/main/webapp/view/templ/expl/expl-toolbar.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/expl/expl-toolbar.xhtml
@@ -128,7 +128,7 @@
             
             <ui:insert name="addToolButtons" />
             
-            <p:commandButton value="#{bundle.CloseSession}" title="#{bundle.ExitProgramm}" 
+            <p:commandButton value="#{bundle.Exit}" title="#{bundle.ExitProgramm}" 
                              rendered="#{explorerBean.explorerViewMode}"
                              ajax="false" icon="ui-icon-extlink"
                              onclick="return isClose = 1;"
